--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@miccoh/payfast-core": "^0.0.6",
+    "@payfast/core": "^0.2.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.7.7",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.35.3",
+    "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
+    "react-paystack": "^6.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
